force-app/main/default/objects/Project__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>