force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( StartDate__c   &gt;=    TODAY() , &quot;In Progress&quot;,  IF(  StopDate__c  &gt;=    TODAY(), &quot;Completed&quot;, &quot;Pre-kickOff&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>